--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.app {
+  background: url("../assets/bg.jpg") center / cover no-repeat;
+}
